RESOLVED FIXED159501
ToThis constant folding in DFG is incorrect when the structure indicates that toThis is overridden
https://bugs.webkit.org/show_bug.cgi?id=159501
Summary ToThis constant folding in DFG is incorrect when the structure indicates that...
Saam Barati
Reported 2016-07-06 19:07:42 PDT
...
Attachments
patch (2.95 KB, patch)
2016-07-07 13:59 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-07-06 19:08:10 PDT
Saam Barati
Comment 2 2016-07-07 13:59:56 PDT
Mark Lam
Comment 3 2016-07-07 14:02:35 PDT
Comment on attachment 283046 [details] patch r=me
WebKit Commit Bot
Comment 4 2016-07-07 15:15:42 PDT
Comment on attachment 283046 [details] patch Clearing flags on attachment: 283046 Committed r202936: <http://trac.webkit.org/changeset/202936>
WebKit Commit Bot
Comment 5 2016-07-07 15:15:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.